--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^2.29.2",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
+    "react-day-picker": "^8.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
