--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@unicef/material-ui-currency-textfield": "^0.8.6",
     "date-fns": "^2.29.2",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
