--- a/package.json
+++ b/package.json
@@ -12,14 +12,21 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@unicef/material-ui-currency-textfield": "^0.8.6",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.2",
+    "express": "^4.18.1",
     "google-map-react": "^2.2.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-day-picker": "^8.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
+    "toastify": "^2.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
