--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.1",
     "@react-google-maps/api": "^2.12.2",
+    "@react-three/drei": "^9.29.1",
+    "@react-three/fiber": "^8.7.3",
+    "@react-three/postprocessing": "^2.6.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,7 +29,9 @@
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "three": "^0.144.0",
     "toastify": "^2.0.1",
+    "troika-three-text": "^0.46.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
