--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
     "date-fns": "^2.29.2",
     "express": "^4.18.1",
     "google-map-react": "^2.2.0",
+    "google-maps-react": "^2.0.6",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-day-picker": "^8.1.1",
     "react-dom": "^18.2.0",
+    "react-geocode": "^0.2.3",
+    "react-google-autocomplete": "^2.7.0",
+    "react-google-maps": "^9.4.5",
+    "react-google-places-autocomplete": "^3.4.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "5",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
